tests/gen-test/test_out/generic.txt
error: type mismatch
 --> generic\root.ctl:4:24
  |
4 | fn main -> u32 => pass(0uint)
  |                        ^^^^^ here
  |
  = info: expected 'u32' but got 'uint'

